tests/baselines/reference/tsxSpreadAttributesResolution6.errors.txt
tests/cases/conformance/jsx/file.tsx(13,10): error TS2322: Type '{ editable: true; }' is not assignable to type 'IntrinsicAttributes & (IntrinsicClassAttributes<TextComponent> & (TextProps & { children?: ReactNode; }))'.
  Property 'onEdit' is missing in type '{ editable: true; }' but required in type '{ editable: true; onEdit: (newText: string) => void; }'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    import React = require('react');
    
    type TextProps = { editable: false }
                   | { editable: true, onEdit: (newText: string) => void };
    
    class TextComponent extends React.Component<TextProps, {}> {
        render() {
            return <span>Some Text..</span>;
        }
    }
    
    // Error
    let x = <TextComponent editable={true} />
             ~~~~~~~~~~~~~
!!! error TS2322: Type '{ editable: true; }' is not assignable to type 'IntrinsicAttributes & (IntrinsicClassAttributes<TextComponent> & (TextProps & { children?: ReactNode; }))'.
!!! error TS2322:   Property 'onEdit' is missing in type '{ editable: true; }' but required in type '{ editable: true; onEdit: (newText: string) => void; }'.
!!! related TS2728 tests/cases/conformance/jsx/file.tsx:4:36: 'onEdit' is declared here.
    
    const textProps: TextProps = {
        editable: false
    };